--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -6,6 +6,7 @@
 
 $black: #494949;
 $grey: rgb(241, 241, 241);
+$dgrey: rgb(212, 212, 212);
 $vlgrey: rgb(254, 254, 254);
 $white: #FFFFFF;
 
