--- a/scss/layout/_note.scss
+++ b/scss/layout/_note.scss
@@ -22,7 +22,7 @@
   }
   @include respond-to($breakpoint-lg) {
     position: fixed;
-    left: 10vw;
+    left: 12vw;
     width: 500px;
     margin: 0;
     top: 26%;
